@@ -3,6 +3,7 @@
 * Add feature 'Print available free devices'
 * Set unlimited device run & screenshot downloads
 * Correct help text for screenshots download
+* Refactor test run download feature to download all files available for the test run
 
 0.1.8
 * Fix file download for Linux and Mac machines.
